[project]
name = "order-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "boudewijn", email = "boudewijn.thuis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
]

[project.scripts]
order-api = "order_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]
test = [
    "pytest>=9.0.2",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",	# allow any typing, needed for endpoints
  "D100", 	# allow modules without docstrings
  "D104",	# allow packages without docstrings
  "D203",	# incompatible
  "D212",
  "D213",
  "D106"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Ignore some rules for tests
[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "D103", "D106", "D101"]


[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
files = ["app/"]
